--- a/gb/21/8/11/n13153911.md
+++ b/gb/21/8/11/n13153911.md
@@ -1,27 +1,27 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kvokyz384/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kvokyz384/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kvokyz384/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kvokyz384/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>橙县政府续推疫苗计划 居民反对</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13153940-IMG_4277-600x400.jpg" />
 <h6> 7月27日橙县例会恢复疫情前的常态，居民在大会议室发言。（李梅／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2021年08月11日讯】（大纪元记者李梅橙县报导）8月10日，橙县监事会加强了警备力量，安检比机场还严格，居民不再被允许进入大会议室，只有发言的人可进去小会议室，门口和里面的警卫和工作人员比居民还多，这次会议的<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97%E8%AE%A1%E5%88%92.md#1">疫苗计划</a>备受争议，居民每人有1分钟的发言时间。</p>
+	<p>【大纪元2021年08月11日讯】（大纪元记者李梅橙县报导）8月10日，橙县监事会加强了警备力量，安检比机场还严格，居民不再被允许进入大会议室，只有发言的人可进去小会议室，门口和里面的警卫和工作人员比居民还多，这次会议的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97%E8%AE%A1%E5%88%92.md#1">疫苗计划</a>备受争议，居民每人有1分钟的发言时间。</p>
 <figure id="attachment_13154165" aria-describedby="caption-attachment-13154165" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13154165-IMG_5845.jpg"><img class="size-large wp-image-13154165" src="https://i.epochtimes.com/assets/uploads/2021/08/id13154165-IMG_5845-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13154165" class="wp-caption-text">8月10日橙县监事会例会，只有在发言时间和发言的人才能进入会议室。（李梅／大纪元）</figcaption></figure>
 <figure id="attachment_13154166" aria-describedby="caption-attachment-13154166" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13154166-IMG_5830.jpg"><img class="size-large wp-image-13154166" src="https://i.epochtimes.com/assets/uploads/2021/08/id13154166-IMG_5830-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13154166" class="wp-caption-text">一个“选择自由，不要恐惧”的展板。（李梅／大纪元）</figcaption></figure>
 <figure id="attachment_13154193" aria-describedby="caption-attachment-13154193" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13154193-IMG_5851.jpg"><img class="size-large wp-image-13154193" src="https://i.epochtimes.com/assets/uploads/2021/08/id13154193-IMG_5851-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13154193" class="wp-caption-text">8月10日橙县监事会例会，居民举着一个“享受共产主义？醒来吧”的小牌子排队等待发言。（李梅／大纪元）</figcaption></figure>
-<p>会议内容除通过拨款8百万美元，用于<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97%E6%B3%A8%E5%B0%84.md#1">疫苗注射</a>、社区外展和免费测试计划合同外，还有如幼儿早期精神<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E5%81%A5%E5%BA%B7%E6%9C%8D%E5%8A%A1.md#1">健康服务</a>、选举设备更新合同等。</p>
+<p>会议内容除通过拨款8百万美元，用于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97%E6%B3%A8%E5%B0%84.md#1">疫苗注射</a>、社区外展和免费测试计划合同外，还有如幼儿早期精神<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%81%A5%E5%BA%B7%E6%9C%8D%E5%8A%A1.md#1">健康服务</a>、选举设备更新合同等。</p>
 <h2>会场为何戒备森严？</h2>
 <p>监事会大楼外最大的变化是扩大了对面大楼的施工区域，人们可聚集的区域就少了很多，并且在临街处还安上了铁栅栏门。县工作人员搭了一个大凉篷给楼外的人们乘凉，因为不论是谁（包括前市议员）都不得进入室内，除非去发言。</p>
 <figure id="attachment_13154171" aria-describedby="caption-attachment-13154171" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13154171-IMG_5863.jpg"><img class="size-large wp-image-13154171" src="https://i.epochtimes.com/assets/uploads/2021/08/id13154171-IMG_5863-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-13154171" class="wp-caption-text">通往监事会大楼的地方建了栅栏，而且有门锁。（李梅／大纪元）</figcaption></figure>
 <p>一个月前的7月13日，橙县监事会每两周一次的例会曾经恢复了正常状态，大楼外不再搭起各种凉篷和挤满了等待发言的人，居民被允许进入会议厅并且每人有3分钟的发言时间，这是自去年大流行以来的最大变化，可惜好景不长。</p>
 <p>在过去的16个月里，人们的发言时间从3分钟逐渐缩短到今年5-6月间的30秒钟，并且限制进入人数，在酷热天气下，人们搭起了一个个凉篷或坐在阴凉处的地上，等待好几个小时，然后只有30秒时间发言；而有些监事需做一下会前准备，这样可在会上少占些时间。</p>
 <p>在7月27日的例会上，橙县监事会决定继续维持紧急卫生状态，大会议室内坐满了居民，大家强烈反对维持紧急状态而让政府有过度的权力，人们发出一片嘘声，齐喊“反对”及“罢免”（民间一直酝酿着要罢免几位监事）。</p>
-<p>接下来就是10日的例会了，许多居民表示，没想到又不让进了，而且如临大敌一般，也许监事会要讨论的<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97%E8%AE%A1%E5%88%92.md#1">疫苗计划</a>太敏感了？</p>
-<h2>儿童精神<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E5%81%A5%E5%BA%B7%E6%9C%8D%E5%8A%A1.md#1">健康服务</a></h2>
+<p>接下来就是10日的例会了，许多居民表示，没想到又不让进了，而且如临大敌一般，也许监事会要讨论的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97%E8%AE%A1%E5%88%92.md#1">疫苗计划</a>太敏感了？</p>
+<h2>儿童精神<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%81%A5%E5%BA%B7%E6%9C%8D%E5%8A%A1.md#1">健康服务</a></h2>
 <p>橙县监事会主席、第一区监事监事安德鲁·杜（Andrew Do）发言支持幼儿精神健康服务合同，杜表示：“COVID-19给所有年龄段的孩子（1-17岁）带来了心理健康风险，特别是种族和服务不足区域的儿童，因此在批准原合同外，我提议增加500万美元资金。”</p>
 <p>第二区监事卡特里娜·弗利（Katrina Foley）表示，希望知道这些幼儿精神健康咨询服务站点都设在哪里。工作人员表示，这是在校外对于2-5岁孩子的精神健康服务，包括对老师的培训。培训是一个大学的计划，他们是获得许可的临床医生。</p>
-<h2>检测和<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97%E6%B3%A8%E5%B0%84.md#1">疫苗注射</a>合同</h2>
+<h2>检测和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%96%AB%E8%8B%97%E6%B3%A8%E5%B0%84.md#1">疫苗注射</a>合同</h2>
 <p>第四区监事道格·查菲（Doug Chaffee ）说：“疫苗‘公平’计划是让人们接种疫苗的绝佳方式，可通过社区组织将人们带入其中。我很高兴这笔钱来自于国家资金而不是县政预算，我建议在每人20美元的免费检测计划外，再加上每人50美元的免费注射疫苗。低收入的家庭会犹豫是否打这一针。”</p>
 <p>医疗保健署署长周昭龙（Clayton Chau）说：“就在两天前，州卫生保健部门发邮件，表示会增加资金为符合条件的人发放打疫苗的礼品卡，激励措施有助于鼓励人们。”</p>
 <p>7月中，橙县宣布建立了加州头一个“橙县公平地图”（OC Equity Map）网站（数据库），人们可查询各地区病毒感染和疫苗接种情况，并且已经用于帮助一些地区注射疫苗。</p>
@@ -38,41 +38,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/21/4/14/n12878752.md#1">纽约市和长岛纳苏郡暂停上门接种疫苗计划</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/21/8/9/n13149958.md#1">Delta病毒肆虐 柯文哲：不必为了打疫苗出国</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/21/8/9/n13150015.md#1">研究：辉瑞疫苗加强剂 副作用类似第二剂</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/21/8/10/n13151076.md#1">加州400多医护人员集会 抗议强制接种疫苗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/4/14/n12878752.md#1">纽约市和长岛纳苏郡暂停上门接种疫苗计划</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/9/n13149958.md#1">Delta病毒肆虐 柯文哲：不必为了打疫苗出国</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/9/n13150015.md#1">研究：辉瑞疫苗加强剂 副作用类似第二剂</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/10/n13151076.md#1">加州400多医护人员集会 抗议强制接种疫苗</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/4/n10829782.md#1" target="_blank">许茹：十月逾五十次地震 天象示警情势危</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/6/n11434332.md#1" target="_blank">俞元：与中共“求同存异” 无疑引狼入室</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11490640.md#1" target="_blank">来自摩尔多瓦的心声：道德是人类真正价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/21/n13594841.md#1">【未解之谜】梅辛传之四：权势抵不过天意</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/26/n13607632.md#1">【时事军事】特种部队 俄入侵乌克兰的秘密武器</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/28/n13612301.md#1">【远见快评】俄入侵闪电战失败 国际秩序重组</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/26/n13607072.md#1">【更新2.26】俄军遭遇后勤挑战与坚定抵抗</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13605832.md#1">保持心脏健康 营养师推荐在Costco买六种食物</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13608596.md#1">徐州铁链女事件持续发酵 中国金融圈怒了</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13605987.md#1">飞往上海开工 香港歌手许靖韵确诊染疫</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13607417.md#1">《维京传奇：英灵神殿》影评：复仇成功 只是挑战的开始</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13605795.md#1">羽绒衣手洗更长寿！5个清洗技巧常保如新</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/26/n13606670.md#1">每个人在选择油漆颜色时都会犯的6个错误</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kvokyz384/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kvokyz384/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/11/n13153911.htm">橙县政府续推疫苗计划 居民反对</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/11/n13153911.htm">橙县政府续推疫苗计划 居民反对</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kvokyz384/djy/blob/master/gb/21/8/11/n13153911.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kvokyz384/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kvokyz384/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kvokyz384/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/8/11/n13153911.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
